--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="assets/js/gallery.js"></script>
 
 </head>
-<body>
+<body >
 
 <div class="htab">
 <a href="index.html"><button class="hbtn hbtn_on">Home</button></a>
@@ -29,62 +29,69 @@
 
   <center>
   <br><br>
-  <table style="color:#4a89c3;">
+
+  <table width="900px" style="border-spacing:0px;">
     <tr>
-    <td><img src="assets/drawings/icon.png" style="float:left; border-radius:50%;border:5px solid white;"></img></td>
-    <td style="z-index:-1;position:relative;left:-50px; text-align:left;vertical-align: middle;background-color:white; padding-left:64px;padding-right:32px;transform: skew(10deg, 0deg);">
-    <div style="transform: skew(-10deg, 0deg);">
+    <td style="width:200px ;background-image:url('assets/drawings/icon.png');background-size:cover;background-repeat: no-repeat;background-position: center; "></td>
+    <td style="text-align:left;vertical-align: middle;background-color:gold; color:black; padding-left:32px;padding-right:32px;padding-top:16px;padding-bottom:16px;">
       <b>WELCOME TO MY WEBSITE!</b>
-      <p>I'm Sade (a.k.a <b>Sadewoo</b> / <b>Spikysaurus</b>)
-      <br>a Freelance 2D Animator / LO アニメーター
-      <br>I've previously worked on Japanese Anime and Western Cartoons.
+      <i>
+      <br>I'm Sade, a Freelance 2D Animator / LO アニメーター
+      <br>I've previously worked on Japanese Anime, Western Cartoons and more.
       <br>Please check my animations below and more art in links above!
-      <br>For inquiries you can contact me at my email <a href="mailto:sade.animation@gmail.com">sade.animation@gmail.com</a>
+      <br>For inquiries you can contact me at <a href="mailto:sade.animation@gmail.com">sade.animation@gmail.com</a>
       <br>Thankyou for visiting!<br>
-      </p>
-
-
-    </div>
+      </i>
   </td>
   </tr>
   </table>
-  </center>
 
   <br>
 
-  <a class="text" href="https://youtube.com/playlist?list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ&si=CdKYLRL_zAYk-BXc" > <h1 style="padding:0px;margin:0px;">CLICK HERE TO WATCH MY ANIMATION REEL!!<br></h1>私のアニメーションリールを見るにはここをクリックしてください</a><br><br>
+  <table class="table-bg"><tr><td>
+
+  <a class="text" href="https://youtube.com/playlist?list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ&si=CdKYLRL_zAYk-BXc">
+  <h1>ANIMATION REEL</h1></a><br>
+
+  <iframe width="750" height="421" src="https://www.youtube.com/embed/videoseries?si=9D9asqN2ZezvMahW&amp;list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<br><br>
+</td><tr></table>
+
 
     <div class="card">
-        <table width=100%  >
+        <table class="table-bg">
+        <tr>
+        <td>
+        <a class="text" href="pages/projects.html">
+        <h1>FEATURED PROJECTS</h1></a><br>
+        <div style="font-size:0;">
+        <!-- ANIME -->
+        <a href="https://www.youtube.com/watch?v=Bi_s_g2l1Yk" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNWI5YmIwNGMtYmZlMS00NmJjLWJkMjAtNTQ3NjVlMGVmNzUwXkEyXkFqcGc@._V1_.jpg" alt=""></a>
+        <a href="" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNGVmZWZmYjctYTQyNS00NTVkLWIxNTctZGQwMzQzMGJkMzIyXkEyXkFqcGc@._V1_.jpg" alt=""></a>
+
+        <!-- Game PV-->
+        <a href="https://www.youtube.com/watch?v=YgDx3x98qnM"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=XhhEXK3NkzU" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+        <a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+
+        <a href="https://www.youtube.com/watch?v=akaQ1tarUQo" target="_blank"><img class="poster" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%2Fid%2FOIP.Clx92IajlaAA5X9zwUDtoAHaLH%3Fpid%3DApi&f=1&ipt=8ba1b1c5ff70cf0281b6069955ad31f1997f33a21c003b2756c09a72b66e71a8" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=YQXp2gEoevs" target="_blank"><img class="poster" src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=iZw1_2PFsZE" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BYzE3ZjIxZDYtMDFjNi00OTBjLWI0NmQtY2IyM2YzZTYwMjA1XkEyXkFqcGc@._V1_.jpg" alt=""></a>
+
         <!-- WESTERN -->
         <a href="https://www.youtube.com/watch?v=tkAB6crm764" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg"></a>
         <a href="https://www.youtube.com/watch?v=p5pbg6SNWDg"target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BYjhmNTAzYmQtMzFkMi00NzEyLWJhMzctZmM2NzRmYmE3MTU4XkEyXkFqcGc@._V1_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=00_sb0h2mRQ" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BMjkxOWUzNmEtZTMyMC00Y2Y2LTk2OGUtZjQzNTc0NDg2NGQ5XkEyXkFqcGc@._V1_.jpg" alt=""></a>
         <a href="https://www.youtube.com/watch?v=IeXNLjLW2FY" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZTg4MDRiMTktOWYyZS00YTIwLTg5ODItYWFmNGExZTg1NWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
         <a href="https://www.youtube.com/watch?v=ZArlzeNNAEs" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BM2E4MDU4NDctNjIxZC00ZWM5LTkyNDQtOGU0MTRhYWVmNzQ5XkEyXkFqcGc@._V1_.jpg" alt=""></a>
-
+        </div>
         <br>
-
-        <a href="https://www.youtube.com/watch?v=eH-ujKvm4Pc&pp=ygUPcG9ydCBieSB0aGUgc2Vh" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNDc0NWFhMDAtZDAzMi00ZmU5LTkzYTAtMjJhYmFmMTZmMjJlXkEyXkFqcGc@._V1_.jpg" alt=""></a>
-        <!-- ANIME -->
-        <a href="https://www.youtube.com/watch?v=Bi_s_g2l1Yk" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNWI5YmIwNGMtYmZlMS00NmJjLWJkMjAtNTQ3NjVlMGVmNzUwXkEyXkFqcGc@._V1_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=7noPMIddli4" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNGVmZWZmYjctYTQyNS00NTVkLWIxNTctZGQwMzQzMGJkMzIyXkEyXkFqcGc@._V1_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=YgDx3x98qnM"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=XhhEXK3NkzU" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
-
-        <br>
-        <a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=akaQ1tarUQo" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BOTU2MmNmYmUtYTViNS00Y2I5LTliYzUtMjBiOTFiOTdkYTg0XkEyXkFqcGc@._V1_UX67_CR0,0,67,98_AL_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=YQXp2gEoevs" target="_blank"><img class="poster" src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=iZw1_2PFsZE" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BYzE3ZjIxZDYtMDFjNi00OTBjLWI0NmQtY2IyM2YzZTYwMjA1XkEyXkFqcGc@._V1_.jpg" alt=""></a>
-		
+		</td>
+		</tr>
         </table>
     </div>
+
+    </center>
    
-  </div>
-</div> 
-
-
 
 
 </body>
