--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,28 +21,20 @@
 </div>
 
 
-
-  <center>
+<center>
   <br><br>
-  <table style="color:#4a89c3;border-spacing:0px;">
 
+  <table width="900px" style="border-spacing:0px;">
     <tr>
-      <td><img src="../assets/drawings/icon.png" style="float:left; border-radius:50%;border:5px solid white;"></img></td>
+    <td style="width:200px ;background-image:url('../assets/drawings/icon.png');background-size:cover;background-repeat: no-repeat;background-position: center; "></td>
+    <td style="text-align:left;vertical-align: middle;background-color:gold; color:black; padding-left:32px;padding-right:32px;padding-top:16px;padding-bottom:16px;">
+      <i>
+      <br>Art/Animation commissions ? Work availability ? Or just to say hi ? Ask me anything !
+      </i>
+      <br><a target="_blank" href="mailto:sade.animation@gmail.com"><h2>sade.animation@gmail.com</h2></a>
 
-
-      <td style="z-index:-1;position:relative;left:-50px; text-align:left;vertical-align: middle;background-color:white; padding-left:64px;padding-right:32px;transform: skew(10deg, 0deg);">
-        <div style="transform: skew(-10deg, 0deg);">
-
-          <p style="color:#4a89c3;">ART/ANIMATION COMMISSIONS? <br> WORK AVAILABILITY? COLLAB? <br> TALK ABOUT THE WEBSITE? <br> OR JUST TO SAY HI? ASK ME ANYTHING!</p>
-        </div>
-      </td>
-      <td style="position:relative;left:-50px;background-color:white;vertical-align: middle;transform: skew(10deg, 0deg);padding-left:32px;padding-right:32px;">
-      <div style="transform: skew(-10deg, 0deg);">
-      <a class="text" target="_blank" href="mailto:sade.animation@gmail.com"><h1>EMAIL ME !!</h1></a>
-      </div>
-      </td>
-    </tr>
-
+  </td>
+  </tr>
   </table>
 
   </center>
