--- a/pages/links.html
+++ b/pages/links.html
@@ -19,21 +19,35 @@
 <div style="float:left;position:absolute;top:0px;">
 <button class="hbtn"><b style="color:white;">SADE</b><b style="color:orange;">WOO</b></button>
 </div>
-<!--
 
-  <div class="tab">
-  <a href="../index.html"><button>BACK TO HOME</button></a>
-  </div>-->
-  <ul>
-    <li><a href="https://sadewoo.gumroad.com/l/SakugaGP"><img width="500px" src="https://public-files.gumroad.com/lfl5qk6a02wj1crsnkkqvwv32d5l"></a></li>
-    <li><a target="_blank" href="https://www.youtube.com/sadewoo0"><img class="sns" src="../assets/blinkies/youtube.gif"></a></li>
-    <li><a target="_blank" href="https://sadewoo.newgrounds.com/"><img class="sns" src="../assets/blinkies/newgrounds.gif"></a></li>
-    <li><a target="_blank" href="https://bsky.app/profile/spikysaurus.bsky.social"><img class="sns" src="../assets/blinkies/bluesky.gif"></a></li>
-    <li><a target="_blank" href="https://www.instagram.com/sadewoo0"><img class="sns" src="../assets/blinkies/instagram.gif"/></a></li>
-    <li><a target="_blank" href="https://www.tumblr.com/sadewoo"><img class="sns" src="../assets/blinkies/tumblr.gif"></a></li>
-    <li><a target="_blank" href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/"><img class="sns" src="../assets/blinkies/linkedin.gif"></a></li>
-    <li><a target="_blank" href="https://sadewoo.gumroad.com/"><img class="sns" src="../assets/blinkies/gumroad.gif"></a></li>
-  </ul>
+<br>
+
+  <a style="color:lime;" class="text" href="https://sadewoo.gumroad.com/l/SakugaGP">
+  <h1>SakugaGP version 1.1.2</h1></a>
+
+  <a style="color:pink;" class="text" href="https://discord.gg/4TMUsSzZyV">
+  <h1>Traditional Animator Indonesia</h1></a>
+
+  <a style="color:red;" class="text" target="_blank" href="https://www.youtube.com/sadewoo0">
+  <h1>YOUTUBE</h1></a>
+
+  <a style="color:orange;" class="text" target="_blank" href="https://sadewoo.newgrounds.com/">
+  <h1>NEWGROUNDS</h1></a>
+
+  <a style="color:cyan;" class="text" target="_blank" href="https://bsky.app/profile/spikysaurus.bsky.social">
+  <h1>BLUESKY</h1></a>
+
+  <a style="color:lightblue;" class="text" target="_blank" href="https://www.instagram.com/sadewoo0">
+  <h1>INSTAGRAM</h1></a>
+
+  <a style="color:darkpurple;" class="text" target="_blank" href="https://www.tumblr.com/sadewoo">
+  <h1>TUMBLR</h1></a>
+
+  <a style="color:blue;"class="text" target="_blank" href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/">
+  <h1>LINKEDIN</h1></a>
+
+  <a style="color:pink;" class="text" target="_blank" href="https://sadewoo.gumroad.com/">
+  <h1>GUMROAD</h1></a>
 
   <p style="color:#4a89c3;">COLLECTION OF ARTICLES I'M MENTIONED IN!</p>
   <ul>
