--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,8 @@
     <td style="width:200px ;background-image:url('../assets/drawings/icon.png');background-size:cover;background-repeat: no-repeat;background-position: center; "></td>
     <td style="text-align:left;vertical-align: middle;background-color:gold; color:black; padding-left:32px;padding-right:32px;padding-top:16px;padding-bottom:16px;">
       <i>
-      <br>Art/Animation commissions ? Work availability ? Or just to say hi ? Ask me anything !
+      <br>Art/Animation commissions ? Work availability ?
+      <br>Or just to say hi ? Ask me anything !
       </i>
       <br><a target="_blank" href="mailto:sade.animation@gmail.com"><h2>sade.animation@gmail.com</h2></a>
 
