--- a/pages/links.html
+++ b/pages/links.html
@@ -43,7 +43,7 @@
   <a style="color:darkpurple;" class="text" target="_blank" href="https://www.tumblr.com/sadewoo">
   <h1>TUMBLR</h1></a>
 
-  <a style="color:blue;"class="text" target="_blank" href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/">
+  <a style="color:cyan;"class="text" target="_blank" href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/">
   <h1>LINKEDIN</h1></a>
 
   <a style="color:pink;" class="text" target="_blank" href="https://sadewoo.gumroad.com/">
