--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div style="font-size:0;">
         <!-- ANIME -->
         <a href="https://www.youtube.com/watch?v=Bi_s_g2l1Yk" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNWI5YmIwNGMtYmZlMS00NmJjLWJkMjAtNTQ3NjVlMGVmNzUwXkEyXkFqcGc@._V1_.jpg" alt=""></a>
-        <a href="" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNGVmZWZmYjctYTQyNS00NTVkLWIxNTctZGQwMzQzMGJkMzIyXkEyXkFqcGc@._V1_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=nTF6QBu7vMA" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNGVmZWZmYjctYTQyNS00NTVkLWIxNTctZGQwMzQzMGJkMzIyXkEyXkFqcGc@._V1_.jpg" alt=""></a>
 
         <!-- Game PV-->
         <a href="https://www.youtube.com/watch?v=YgDx3x98qnM"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
