--- a/index.html
+++ b/index.html
@@ -66,27 +66,32 @@
         <h1>FEATURED PROJECTS</h1></a><br>
         <div style="font-size:0;">
         <!-- ANIME -->
-        <a href="https://www.youtube.com/watch?v=Bi_s_g2l1Yk" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNWI5YmIwNGMtYmZlMS00NmJjLWJkMjAtNTQ3NjVlMGVmNzUwXkEyXkFqcGc@._V1_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=nTF6QBu7vMA" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BNGVmZWZmYjctYTQyNS00NTVkLWIxNTctZGQwMzQzMGJkMzIyXkEyXkFqcGc@._V1_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=Bi_s_g2l1Yk" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BNWI5YmIwNGMtYmZlMS00NmJjLWJkMjAtNTQ3NjVlMGVmNzUwXkEyXkFqcGc@._V1_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=nTF6QBu7vMA" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BNGVmZWZmYjctYTQyNS00NTVkLWIxNTctZGQwMzQzMGJkMzIyXkEyXkFqcGc@._V1_.jpg" alt=""></a>
 
         <!-- Game PV-->
-        <a href="https://www.youtube.com/watch?v=YgDx3x98qnM"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=XhhEXK3NkzU" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+        <a href="hhttps://www.youtube.com/watch?v=BLUcapqwyuU"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=XhhEXK3NkzU" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
         <a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
 
-        <a href="https://www.youtube.com/watch?v=akaQ1tarUQo" target="_blank"><img class="poster" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%2Fid%2FOIP.Clx92IajlaAA5X9zwUDtoAHaLH%3Fpid%3DApi&f=1&ipt=8ba1b1c5ff70cf0281b6069955ad31f1997f33a21c003b2756c09a72b66e71a8" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=YQXp2gEoevs" target="_blank"><img class="poster" src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=akaQ1tarUQo" target="_blank"><img class="poster hvr" src="https://e.snmc.io/lk/f/x/edfaf7f229be0f8c28839bc97b4f82e9/10511778" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=YQXp2gEoevs" target="_blank"><img class="poster hvr" src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt=""></a>
         <a href="https://www.youtube.com/watch?v=iZw1_2PFsZE" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BYzE3ZjIxZDYtMDFjNi00OTBjLWI0NmQtY2IyM2YzZTYwMjA1XkEyXkFqcGc@._V1_.jpg" alt=""></a>
 
         <!-- WESTERN -->
-        <a href="https://www.youtube.com/watch?v=tkAB6crm764" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg"></a>
-        <a href="https://www.youtube.com/watch?v=p5pbg6SNWDg"target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BYjhmNTAzYmQtMzFkMi00NzEyLWJhMzctZmM2NzRmYmE3MTU4XkEyXkFqcGc@._V1_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=IeXNLjLW2FY" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZTg4MDRiMTktOWYyZS00YTIwLTg5ODItYWFmNGExZTg1NWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=ZArlzeNNAEs" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BM2E4MDU4NDctNjIxZC00ZWM5LTkyNDQtOGU0MTRhYWVmNzQ5XkEyXkFqcGc@._V1_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=tkAB6crm764" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg"></a>
+        <a href="https://www.youtube.com/watch?v=p5pbg6SNWDg"target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BYjhmNTAzYmQtMzFkMi00NzEyLWJhMzctZmM2NzRmYmE3MTU4XkEyXkFqcGc@._V1_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=IeXNLjLW2FY" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BZTg4MDRiMTktOWYyZS00YTIwLTg5ODItYWFmNGExZTg1NWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=ZArlzeNNAEs" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BM2E4MDU4NDctNjIxZC00ZWM5LTkyNDQtOGU0MTRhYWVmNzQ5XkEyXkFqcGc@._V1_.jpg" alt=""></a>
         </div>
         <br>
 		</td>
 		</tr>
+        <tr>
+        <td>
+        <a href="https://youtu.be/Z_G2cU5-vSk?t=104" target="_blank" ><img width="750px" class="hvr" src="assets/drawings/NinjaCat.png"></a>
+        </td>
+        </tr>
         </table>
     </div>
 
