--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <!-- Game PV-->
         <a href="hhttps://www.youtube.com/watch?v=BLUcapqwyuU"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
         <a href="https://www.youtube.com/watch?v=XhhEXK3NkzU" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
-        <a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+        <a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
 
         <a href="https://www.youtube.com/watch?v=akaQ1tarUQo" target="_blank"><img class="poster hvr" src="https://e.snmc.io/lk/f/x/edfaf7f229be0f8c28839bc97b4f82e9/10511778" alt=""></a>
         <a href="https://www.youtube.com/watch?v=YQXp2gEoevs" target="_blank"><img class="poster hvr" src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt=""></a>
-        <a href="https://www.youtube.com/watch?v=iZw1_2PFsZE" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BYzE3ZjIxZDYtMDFjNi00OTBjLWI0NmQtY2IyM2YzZTYwMjA1XkEyXkFqcGc@._V1_.jpg" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=iZw1_2PFsZE" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BYzE3ZjIxZDYtMDFjNi00OTBjLWI0NmQtY2IyM2YzZTYwMjA1XkEyXkFqcGc@._V1_.jpg" alt=""></a>
 
         <!-- WESTERN -->
         <a href="https://www.youtube.com/watch?v=tkAB6crm764" target="_blank"><img class="poster hvr" src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg"></a>
