--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 </td><tr></table>
 
 <style>
-.htop {background-color:gold;color:black;border-top-left-radius:10px;border-top-right-radius:10px;padding:5px;}
-.hbody {border-bottom-left-radius:10px;border-bottom-right-radius:10px;font-size:0;padding-top:0px;padding-bottom:10px;background-color:#ffd700;}
+.htop {background-color:#1D2545;color:silver;border-top-left-radius:10px;border-top-right-radius:10px;padding:5px;}
+.hbody {border-bottom-left-radius:10px;border-bottom-right-radius:10px;font-size:0;padding-top:0px;padding-bottom:10px;background-color:#1D2545;}
 .tba{opacity:0.3;}
 </style>
     <div class="card" >
