--- a/pages/links.html
+++ b/pages/links.html
@@ -25,7 +25,7 @@
   <a style="color:lime;" class="text" href="https://sadewoo.gumroad.com/l/SakugaGP">
   <h1>SakugaGP version 1.1.4</h1></a>
 
-  <a style="color:pink;" class="text" href="https://discord.gg/4TMUsSzZyV">
+  <a style="color:pink;" class="text" href="https://traditionalanimatorindonesia.github.io/">
   <h1>Traditional Animator Indonesia</h1></a>
 
   <a style="color:red;" class="text" target="_blank" href="https://www.youtube.com/sadewoo0">
