--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <a href="pages/links.html"><button class="hbtn hbtn_off">Links</button></a>
 <a href="pages/contact.html"><button class="hbtn hbtn_off">Contact</button></a>
 </div>
-<div style="float:left;position:absolute;top:0px;">
-<button class="hbtn"><b style="color:white;">SADE</b><b style="color:orange;">WOO</b></button>
+<div class="logo-top">
+<button class="hbtn"><b style="color:white;">SADE</b><b style="color:pink;">WOO</b></button>
 </div>
 
   <center>
@@ -53,13 +53,13 @@
   <a class="text" href="https://youtube.com/playlist?list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ&si=CdKYLRL_zAYk-BXc">
   <h1>ANIMATION REEL</h1></a><br>
 
-  <iframe width="750" height="421" src="https://www.youtube.com/embed/videoseries?si=9D9asqN2ZezvMahW&amp;list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="100%" height="421" src="https://www.youtube.com/embed/videoseries?si=9D9asqN2ZezvMahW&amp;list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <br><br>
 </td><tr></table>
 
 <style>
-.htop {background-color:#1D2545;color:silver;border-top-left-radius:10px;border-top-right-radius:10px;padding:5px;}
-.hbody {border-bottom-left-radius:10px;border-bottom-right-radius:10px;font-size:0;padding-top:0px;padding-bottom:10px;background-color:#1D2545;}
+.htop {background-color:#9b7a2f;color:silver;border-top-left-radius:10px;border-top-right-radius:10px;padding:5px;}
+.hbody {border-bottom-left-radius:10px;border-bottom-right-radius:10px;font-size:0;padding-top:0px;padding-bottom:10px;background-color:#9b7a2f;}
 .tba{opacity:0.3;}
 </style>
     <div class="card" >
