--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,8 +13,8 @@
 <a href="links.html"><button class="hbtn hbtn_off">Links</button></a>
 <a href="contact.html"><button class="hbtn hbtn_off">Contact</button></a>
 </div>
-<div style="float:left;position:absolute;top:0px;">
-<button class="hbtn"><b style="color:white;">SADE</b><b style="color:orange;">WOO</b></button>
+<div class="logo-top">
+<button class="hbtn"><b style="color:white;">SADE</b><b style="color:pink;">WOO</b></button>
 </div>
 
 
@@ -82,18 +82,18 @@ fetch('../assets/json/data_projects.json')
 </script>
 
 <style>
-table,tr,td{border:1px dashed purple;border-collapse: collapse;padding:0px;border-spacing:0px;}
-table{width:90%;color:white;}
+table,tr,td{border:1px dashed purple;border-collapse: collapse;padding:0px;border-spacing:0px;border-radius:10px;}
+table{width:90%;color:black;background-color:white;}
 button{border:1px solid gold;color:white;}
 
 </style>
 <div style="color:#4a89c3;">
 <br>THE LIST OF THE STUDIOS I WORKED WITH AND PROJECTS I PARTICIPATED IN
 <br><br>
-<button style="background-color:black;">TRANSPARENT : My animations only</button>
-<button style="background-color:#4e0000;">RED : To be Added</button><br>
-<button style="background-color:#464200;">YELLOW : Credit screenshot only (no permission to upload)</button>
-<button style="background-color:#1d3b4f;">BLUE : Full project</button>
+<button style="background-color:white;color:black;">Uncolored : My animations only</button>
+<button style="background-color:red;">RED : To be Added</button><br>
+<button style="background-color:orange;">YELLOW : Credit screenshot only (no permission to upload)</button>
+<button style="background-color:lightblue;">BLUE : Full project</button>
 <br><br>
 <center>
 <table id="tb">
