--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,8 +16,8 @@
 <a href="links.html"><button class="hbtn hbtn_off">Links</button></a>
 <a href="contact.html"><button class="hbtn hbtn_on">Contact</button></a>
 </div>
-<div style="float:left;position:absolute;top:0px;">
-<button class="hbtn"><b style="color:white;">SADE</b><b style="color:orange;">WOO</b></button>
+<div class="logo-top">
+<button class="hbtn"><b style="color:white;">SADE</b><b style="color:pink;">WOO</b></button>
 </div>
 
 
