--- a/pages/links.html
+++ b/pages/links.html
@@ -15,11 +15,11 @@
 <a href="gallery.html"><button class="hbtn hbtn_off">Drawings</button></a>
 <a href="links.html"><button class="hbtn hbtn_on">Links</button></a>
 <a href="contact.html"><button class="hbtn hbtn_off">Contact</button></a>
-</div>
-<div style="float:left;position:absolute;top:0px;">
-<button class="hbtn"><b style="color:white;">SADE</b><b style="color:orange;">WOO</b></button>
-</div>
 
+</div>
+<div class="logo-top">
+<button class="hbtn"><b style="color:white;">SADE</b><b style="color:pink;">WOO</b></button>
+</div>
 <br>
 
   <a style="color:lime;" class="text" href="https://sadewoo.gumroad.com/l/SakugaGP">
