--- a/pages/projects.html
+++ b/pages/projects.html
@@ -88,7 +88,7 @@ button{border:1px solid gold;color:white;}
 
 </style>
 <div style="color:#4a89c3;">
-<br>THE LIST OF THE STUDIOS I WORKED WITH AND PROJECTS I PARTICIPATED IN
+<br>HISTORY OF PROJECTS I PARTICIPATED IN
 <br><br>
 <button style="background-color:white;color:black;">Uncolored : My animations only</button>
 <button style="background-color:red;">RED : To be Added</button><br>
