--- a/pages/projects.html
+++ b/pages/projects.html
@@ -82,8 +82,8 @@ fetch('../assets/json/data_projects.json')
 </script>
 
 <style>
-table,tr,td{border:1px dashed purple;border-collapse: collapse;padding:0px;border-spacing:0px;border-radius:10px;}
-table{width:90%;color:black;background-color:white;}
+table,tr,td{border-top:1px solid purple;border-collapse: collapse;padding:10px;border-spacing:0px;border-radius:10px;}
+table{width:90%;color:black;background: rgba(255, 255, 255, .8);}
 button{border:1px solid gold;color:white;}
 
 </style>
