--- a/pages/projects.html
+++ b/pages/projects.html
@@ -91,9 +91,9 @@ button{border:1px solid gold;color:white;}
 <br>HISTORY OF PROJECTS I PARTICIPATED IN
 <br><br>
 <button style="background-color:white;color:black;">Uncolored : My animations only</button>
-<button style="background-color:red;">RED : To be Added</button><br>
-<button style="background-color:orange;">YELLOW : Credit screenshot only (no permission to upload)</button>
-<button style="background-color:lightblue;">BLUE : Full project</button>
+<button style="background-color:red;">ORANGE : To be Added</button><br>
+<button style="background-color:yellow;color:black;">YELLOW : Credit screenshot only (no permission to upload)</button>
+<button style="background-color:lightgreen;color:black;">GREEN : Full project</button>
 <br><br>
 <center>
 <table id="tb">
